# fastapi_healthcheck_uri

./: README.md  pyproject.toml
fastapi_healthcheck_uri/: __init__.py  service.py
