[tool.poetry]
name = "fastapi_healthcheck_uri"
version = "0.1.0"
description = "A module to have a FastAPI HealthCheck reach out to a URI to validate external service health."
authors = ["James Tombleson <luther38@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtom38/fastapi_healthcheck_uri"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi-healthcheck = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
